--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "@vercel/kv": "^3.0.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
