--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@supabase/supabase-js": "^2.49.9",
     "@vercel/analytics": "^1.5.0",
     "@vercel/kv": "^3.0.0",
+    "@vercel/postgres": "^0.10.0",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^149.0.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "nodemailer": "^7.0.3",
