--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/kv": "^3.0.0",
     "@vercel/postgres": "^0.10.0",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "google-auth-library": "^9.15.1",
     "googleapis": "^149.0.0",
     "lucide-react": "^0.511.0",
